# src/Controller/ApiResultsCommandController.php
@@ -10,7 +10,7 @@ use Symfony\Component\HttpFoundation\{Request, Response};
 use Symfony\Component\Routing\Attribute\Route;
 
 #[Route(
-    path: '/api/results',
+    path: ApiUsersQueryInterface::RUTA_API_RESULTS,
     name: 'api_results_'
 )]
 class ApiResultsCommandController extends AbstractController implements ApiResultsCommandInterface
@@ -20,6 +20,15 @@ class ApiResultsCommandController extends AbstractController implements ApiResul
     ) {
     }
 
+    #[Route(
+        path: ".{_format}",
+        name: 'post',
+        requirements: [
+            '_format' => "json|xml"
+        ],
+        defaults: [ '_format' => null ],
+        methods: [Request::METHOD_POST],
+    )]
     public function postAction(Request $request): Response
     {
         $format = Utils::getFormat($request);
@@ -46,6 +55,16 @@ class ApiResultsCommandController extends AbstractController implements ApiResul
         return Utils::apiResponse(Response::HTTP_CREATED, ['result' => $result], $format);
     }
 
+    #[Route(
+        path: "/{resultId}.{_format}",
+        name: 'put',
+        requirements: [
+            'resultId' => "\d+",
+            '_format' => "json|xml"
+        ],
+        defaults: [ '_format' => null ],
+        methods: [Request::METHOD_PUT],
+    )]
     public function putAction(Request $request, int $resultId): Response
     {
         $format = Utils::getFormat($request);
@@ -75,6 +94,17 @@ class ApiResultsCommandController extends AbstractController implements ApiResul
         return Utils::apiResponse(Response::HTTP_OK, ['result' => $result], $format);
     }
 
+
+    #[Route(
+        path: "/{resultId}.{_format}",
+        name: 'delete',
+        requirements: [
+            'resultId' => "\d+",
+            '_format' => "json|xml"
+        ],
+        defaults: [ '_format' => null ],
+        methods: [Request::METHOD_DELETE],
+    )]
     public function deleteAction(Request $request, int $resultId): Response
     {
         $format = Utils::getFormat($request);
